@@ -1,26 +1,20 @@
 // -*- mode: c++; indent-tabs-mode: nil; -*-
 //
-// Copyright (c) 2009-2012 Illumina, Inc.
+// Strelka - Small Variant Caller
+// Copyright (c) 2009-2016 Illumina, Inc.
 //
-// Permission is hereby granted, free of charge, to any person
-// obtaining a copy of this software and associated documentation
-// files (the "Software"), to deal in the Software without
-// restriction, including without limitation the rights to use, copy,
-// modify, merge, publish, distribute, sublicense, and/or sell copies
-// of the Software, and to permit persons to whom the Software is
-// furnished to do so, subject to the following conditions:
+// This program is free software: you can redistribute it and/or modify
+// it under the terms of the GNU General Public License as published by
+// the Free Software Foundation, either version 3 of the License, or
+// at your option) any later version.
 //
-// The above copyright notice and this permission notice shall be
-// included in all copies or substantial portions of the Software.
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
 //
-// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-// EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-// MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS
-// BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN
-// ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
-// CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-// SOFTWARE.
+// You should have received a copy of the GNU General Public License
+// along with this program.  If not, see <http://www.gnu.org/licenses/>.
 //
 //
 
@@ -41,12 +35,14 @@
 /// string input
 ///
 template <typename FLOAT_TYPE>
-struct PrettyFloat {
+struct PrettyFloat
+{
     PrettyFloat(
         const char* init = nullptr)
         : _numval(0)
     {
-        if (nullptr == init) {
+        if (nullptr == init)
+        {
             _strval="0";
             return;
         }
@@ -54,16 +50,23 @@ struct PrettyFloat {
     }
 
     void
-    update(const char* str) {
+    update(const char* str)
+    {
         _strval=str;
         _numval=illumina::blt_util::parse_double_str(_strval);
     }
 
     const std::string&
-    strval() const { return _strval; }
+    strval() const
+    {
+        return _strval;
+    }
 
     FLOAT_TYPE
-    numval() const { return _numval; }
+    numval() const
+    {
+        return _numval;
+    }
 
 private:
     std::string _strval;
@@ -77,13 +80,15 @@ void validate(boost::any& v,
               const std::vector<std::string>& values,
               PrettyFloat<FLOAT_TYPE>*, int)
 {
-    if (v.empty()) {
+    if (v.empty())
+    {
         v = boost::any(PrettyFloat<FLOAT_TYPE>());
     }
     PrettyFloat<FLOAT_TYPE>* tv = boost::any_cast<PrettyFloat<FLOAT_TYPE>>(&v);
     assert(nullptr != tv);
 
-    if (values.size() != 1) {
+    if (values.size() != 1)
+    {
         throw boost::program_options::validation_error(boost::program_options::validation_error::invalid_option_value);
     }
 
