@@ -292,7 +292,7 @@ updateFromAlleleGroup(
 
 void
 getGenotypeLhoodsForForcedOutputAllele(
-    const starling_base_deriv_options &dopt,
+    const starling_base_deriv_options& dopt,
     const starling_sample_options& sampleOptions,
     const GenotypePriors& genotypePriors,
     const unsigned groupLocusPloidy,
