@@ -27,7 +27,7 @@
 
 template <typename T>
 std::vector<size_t>
-sortIndices(const std::vector<T> &v)
+sortIndices(const std::vector<T>& v)
 {
     // initialize original index locations
     std::vector<size_t> idx(v.size());
@@ -35,7 +35,10 @@ sortIndices(const std::vector<T> &v)
 
     // sort indexes based on comparing values in v
     std::sort(idx.begin(), idx.end(),
-              [&v](size_t i1, size_t i2) {return v[i1] > v[i2];});
+              [&v](size_t i1, size_t i2)
+    {
+        return v[i1] > v[i2];
+    });
 
     return idx;
 }
